# deployment-helper

./: .env.example  .gitignore  README.md  output.txt  pyproject.toml
deployment_helper/cli/: __main__.py
deployment_helper/core/: __init__.py
deployment_helper/core/clients/: cohere.py  github.py  openai.py
deployment_helper/core/llm_engine/: __init__.py  aws_analyzer.py  github_analyzer.py
deployment_helper/web/: app.py
deployment_helpers/: aws_data.py  main.py
deployment_helpers/clients/: cohere.py  github.py  openai.py
deployment_helpers/llm/: __init__.py  aws.py  relevance.py
deployment_helpers/llm/aws/: helpers.py  service_actions.py  service_names.py
deployment_helpers/llm/github/: relevance.py
scripts/: set-env.sh
